--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md m-1">
               <div class="h-100 py-3 p-3" id="nav3">
-                <a href = "#popup" id = "for-popup-form">Ссылка меню 3</a>
+                <a href = "#popup" id = "for-popup-form">Напишите нам</a>
               </div>
             </div>
           </div>
